--- a/ContactTracing/Pages/Shared/_Layout.cshtml
+++ b/ContactTracing/Pages/Shared/_Layout.cshtml
@@ -33,6 +33,9 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Profile">Profile</a>
+                            </li>
                         }
                     </ul>
                 </div>
