--- a/ContactTracing/Views/Shared/_Layout.cshtml
+++ b/ContactTracing/Views/Shared/_Layout.cshtml
@@ -35,6 +35,9 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Profile">Profile</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Classroom_Map">Classroom Map</a>
+                            </li>
                     </ul>
                 </div>
             </div>
