--- a/ContactTracing/Pages/Seats/Create.cshtml
+++ b/ContactTracing/Pages/Seats/Create.cshtml
@@ -33,9 +33,14 @@
                 <input asp-for="Seat.Width" class="form-control" />
                 <span asp-validation-for="Seat.Width" class="text-danger"></span>
             </div>
+            <div class="form-group form-check">
+                <label class="form-check-label">
+                    <input class="form-check-input" asp-for="Seat.ProfDefault" /> @Html.DisplayNameFor(model => model.Seat.ProfDefault)
+                </label>
+            </div>
             <div class="form-group">
                 <label asp-for="Seat.ClassroomID" class="control-label"></label>
-                <select asp-for="Seat.ClassroomID" class ="form-control" asp-items="ViewBag.ClassroomID"></select>
+                <select asp-for="Seat.ClassroomID" class="form-control" asp-items="ViewBag.ClassroomID"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
