--- a/ContactTracing/wwwroot/css/site.css
+++ b/ContactTracing/wwwroot/css/site.css
@@ -36,10 +36,10 @@ html {
 }
 
 .border-top {
-  border-top: 1px solid #e5e5e5;
+    border-top: 1px solid #de7008;
 }
 .border-bottom {
-  border-bottom: 1px solid #e5e5e5;
+    border-bottom: 1px solid #de7008;
 }
 
 .box-shadow {
