fixed the pages

--- a/ContactTracing/Views/Students/ClassroomAssignments/Details.cshtml
+++ b/ContactTracing/Views/Students/ClassroomAssignments/Details.cshtml
@@ -1,5 +1,5 @@
 @page
-@model ContactTracing.Pages.ClassroomAssignments.DetailsModel
+@model ContactTracing.Views.Students.ClassroomAssignments.DetailsModel
 
 @{
     ViewData["Title"] = "Details";
