--- a/ContactTracing/Views/Students/ClassroomAssignments/Index.cshtml
+++ b/ContactTracing/Views/Students/ClassroomAssignments/Index.cshtml
@@ -1,5 +1,5 @@
 @page
-@model ContactTracing.Pages.ClassroomAssignments.IndexModel
+@model ContactTracing.Views.Students.ClassroomAssignments.IndexModel
 
 @{
     ViewData["Title"] = "Index";
