--- a/ContactTracing/Pages/Accounts/Create.cshtml
+++ b/ContactTracing/Pages/Accounts/Create.cshtml
@@ -15,7 +15,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Account.Email" class="control-label"></label>
-                <input asp-for="Account.Email" class="form-control" />
+                <input asp-for="Account.Email" value="@User.Identity.Name" class="form-control" disabled />
                 <span asp-validation-for="Account.Email" class="text-danger"></span>
             </div>
             <div class="form-group">
