--- a/ContactTracing/Pages/Courses/Create.cshtml
+++ b/ContactTracing/Pages/Courses/Create.cshtml
@@ -28,8 +28,12 @@
                 <select asp-for="Course.MainClassroomID" class ="form-control" asp-items="ViewBag.MainClassroomID"></select>
             </div>
             <div class="form-group">
-                <label asp-for="Course.PeriodID" class="control-label"></label>
-                <select asp-for="Course.PeriodID" class ="form-control" asp-items="ViewBag.PeriodID"></select>
+                <label asp-for="Course.Period" class="control-label"></label>
+                <select asp-for="Course.PeriodID" class="form-control"
+                        asp-items="@Model.CourseNameSL">
+                    <option value="">-- Select Period --</option>
+                </select>
+                <span asp-validation-for="Course.PeriodID" class="text-danger" />
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
