--- a/ContactTracing/Pages/Courses/Edit.cshtml
+++ b/ContactTracing/Pages/Courses/Edit.cshtml
@@ -13,11 +13,10 @@
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Course.ID" />
+            <input type="hidden" asp-for="Course.Code" />
             <div class="form-group">
                 <label asp-for="Course.Code" class="control-label"></label>
-                <input asp-for="Course.Code" class="form-control" />
-                <span asp-validation-for="Course.Code" class="text-danger"></span>
+                <div>@Html.DisplayFor(model => model.Course.Code)</div>
             </div>
             <div class="form-group">
                 <label asp-for="Course.Name" class="control-label"></label>
