--- a/ContactTracing/Pages/Accounts/Edit.cshtml
+++ b/ContactTracing/Pages/Accounts/Edit.cshtml
@@ -16,7 +16,7 @@
             <input type="hidden" asp-for="Account.ID" />
             <div class="form-group">
                 <label asp-for="Account.Email" class="control-label"></label>
-                <input asp-for="Account.Email" class="form-control" />
+                <input asp-for="Account.Email" class="form-control" disabled />
                 <span asp-validation-for="Account.Email" class="text-danger"></span>
             </div>
             <div class="form-group">
