--- a/ContactTracing/Pages/Accounts/Index.cshtml
+++ b/ContactTracing/Pages/Accounts/Index.cshtml
@@ -1,15 +1,28 @@
 @page
 @model ContactTracing.Pages.Accounts.IndexModel
 
-@{
-    ViewData["Title"] = "Index";
-}
+@{ ViewData["Title"] = "Account"; }
 
 <h1>Index</h1>
 
+
+@foreach (var item in Model.Account)
+{
+    if (item.Email == User.Identity.Name)
+    {
+        <style>
+            p {
+                visibility: hidden;
+            }
+        </style>
+        
+    }
+}
+
 <p>
-    <a asp-page="Create">Create New</a>
+    <a asp-page="Create" id="testing">Create New</a>
 </p>
+
 <table class="table">
     <thead>
         <tr>
@@ -32,29 +45,35 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model.Account) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Email)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FirstName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LastName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Professor)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FullyVaccinated)
-            </td>
-            <td>
-                <a asp-page="./Edit" asp-route-id="@item.ID">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.ID">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.ID">Delete</a>
-            </td>
-        </tr>
+        @foreach (var item in Model.Account)
+        {
+            if (item.Email == User.Identity.Name)
+            {
+<tr>
+    <td>
+        @Html.DisplayFor(modelItem => item.Email)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.FirstName)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.LastName)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Professor)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.FullyVaccinated)
+    </td>
+    <td>
+        <a asp-page="./Edit" asp-route-id="@item.ID">Edit</a> |
+        <a asp-page="./Details" asp-route-id="@item.ID">Details</a> |
+        <a asp-page="./Delete" asp-route-id="@item.ID">Delete</a>
+    </td>
+
+</tr>
+}
+
 }
     </tbody>
 </table>
