--- a/ContactTracing/Pages/Enrollments/Create.cshtml
+++ b/ContactTracing/Pages/Enrollments/Create.cshtml
@@ -19,12 +19,20 @@
                 </label>
             </div>
             <div class="form-group">
-                <label asp-for="Enrollment.CourseID" class="control-label"></label>
-                <select asp-for="Enrollment.CourseID" class ="form-control" asp-items="ViewBag.CourseID"></select>
+                <label asp-for="Enrollment.Course" class="control-label"></label>
+                <select asp-for="Enrollment.CourseID" class="form-control"
+                        asp-items="@Model.CourseNameSL">
+                    <option value="">-- Select Course --</option>
+                </select>
+                <span asp-validation-for="Enrollment.CourseID" class="text-danger" />
             </div>
             <div class="form-group">
-                <label asp-for="Enrollment.AccountID" class="control-label"></label>
-                <select asp-for="Enrollment.AccountID" class ="form-control" asp-items="ViewBag.AccountID"></select>
+                <label asp-for="Enrollment.Account" class="control-label"></label>
+                <select asp-for="Enrollment.AccountID" class="form-control"
+                        asp-items="@Model.AccountNameSL">
+                    <option value="">-- Select Account --</option>
+                </select>
+                <span asp-validation-for="Enrollment.AccountID" class="text-danger" />
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
