font changes, privacy policy, create acc redirect

--- a/ContactTracing/Pages/Accounts/Create.cshtml
+++ b/ContactTracing/Pages/Accounts/Create.cshtml
@@ -1,8 +1,17 @@
 @page
 @model ContactTracing.Pages.Accounts.CreateModel
 
-@{
-    ViewData["Title"] = "Create";
+@{ ViewData["Title"] = "Create"; }
+
+@foreach (var item in Model.Accounts1)
+{
+    if (item.Email == User.Identity.Name)
+    {
+        Response.Redirect("./Index");
+        
+        
+    }
+   
 }
 
 <h1>Create</h1>
