--- a/ContactTracing/Views/Shared/_Layout.cshtml
+++ b/ContactTracing/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container" style="background-color: darkorange"> 
+            <div class="container" style="background-color: darkorange; font-family: Centaur"> 
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><b>Contact Tracing</b></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -51,7 +51,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer text-muted"style="font-family:Centaur; font-size: large">
         <div class="container">
             &copy; 2021 - Contact Tracing - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
