in-line comments + font change

--- a/ContactTracing/Pages/Accounts/Create.cshtml
+++ b/ContactTracing/Pages/Accounts/Create.cshtml
@@ -5,11 +5,10 @@
 
 @foreach (var item in Model.Accounts1)
 {
-    if (item.Email == User.Identity.Name)
+    if (item.Email == User.Identity.Name) //if user's microsoft email is in our database already, redirect to index -zk
     {
         Response.Redirect("./Index");
-        
-        
+          
     }
    
 }
