--- a/ContactTracing/Views/Shared/_Layout.cshtml
+++ b/ContactTracing/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <ul class="navbar-nav flex-grow-1">
+                    <ul class="navbar-nav flex-grow-1" style="font-size:large">
                         @if (!User.Identity.IsAuthenticated)
                         {
             <li class="nav-item">
@@ -39,7 +39,7 @@
                     </ul>
 
                 </div>
-                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy"><b>Privacy</b></a>
+                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy" style="font-size:large"><b>Privacy</b></a>
 
             </div>
         </nav>
