--- a/ContactTracing/Views/Home/Classroom_Map.cshtml
+++ b/ContactTracing/Views/Home/Classroom_Map.cshtml
@@ -17,7 +17,7 @@
   var is_pressed=false;
 
   chairs = [{
-    state:"empty",
+    state:"occupied",
     x:260.83,
     y:529.25,
   },{
@@ -25,7 +25,7 @@
     x:340.41,
     y:529.25,
   },{
-    state:"empty",
+    state:"occupied",
     x:154.625,
     y:243.875,
   },{
@@ -33,7 +33,7 @@
     x:154.625,
     y:309.625,
   },{
-    state:"empty",
+    state:"occupied",
     x:154.625,
     y:375.375,
   },{
@@ -184,7 +184,7 @@
    <p> <input id="finalbutton" type="button" value="Submit Seat"></input> </p>
  </body>
  <footer>
-     <script>
+     <script> //email notification system, how to send to useridentityname? -zk
          function sendMail() {
 
              var link = "mailto:keyszl@hendrix.edu"
