--- a/ContactTracing/Pages/Histories/Create.cshtml
+++ b/ContactTracing/Pages/Histories/Create.cshtml
@@ -30,8 +30,9 @@
             </div>
             <div class="form-group">
                 <label asp-for="History.AccountID" class="control-label"></label>
-                <select asp-for="History.AccountID" class ="form-control" asp-items="ViewBag.AccountID"></select>
+                <select asp-for="History.AccountID" class="form-control" asp-items="ViewBag.AccountID" value="@User.Identity.Name"></select>
             </div>
+            
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
