--- a/ContactTracing/Views/Shared/_Layout.cshtml
+++ b/ContactTracing/Views/Shared/_Layout.cshtml
@@ -35,6 +35,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Classroom_Map"><b>Classroom Map</b></a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="History"><b>History</b></a>
+                        </li>
 
                     </ul>
 
